--- a/presentation/html/index.html
+++ b/presentation/html/index.html
@@ -3,39 +3,59 @@
 <head>
     <meta charset="UTF-8">
     <title>Login Page</title>
-    <link rel="stylesheet" href="../css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/login.css">
-    <script src="../js/bootstrap.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+            crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+            integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+            crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+            integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+            crossorigin="anonymous"></script>
 </head>
-<body class="container">
-<div class="row-top"></div>
-<div class="row row-mid">
-    <div class="sidenav col-4">
-        <div class="login-main-text ">
-            <h2>COVID-19 Research<br> Forum</h2>
-            <p>Login or register from here.</p>
+<body>
+<div class="container" style="">
+    <div class="row row-top ">
+        <div class="col-12" style="">
+            <img src="../images/molecule.jpg" class="img-fluid rounded molecule" alt="SARS-COV2 molecule" style="">
         </div>
     </div>
-    <div class="col-8">
-        <form class="login">
-            <div class="form-group">
-                <label for="username">Username</label>
-                <input type="text" class="form-control" id="username"
-                       placeholder="Enter username">
+    <div class="row row-mid">
+        <div class="sidenav col-4 border border-dark rounded">
+            <div class="login-main-text">
+                <h2>COVID-19 Research<br> Forum</h2>
+                <p>Login or register from here.</p>
             </div>
-            <div class="form-group">
-                <label for="password">Password</label>
-                <input type="password" class="form-control" id="password" placeholder="Password">
-            </div>
-            <div class="row ">
-                <div class="col-6">
-                    <button type="submit" class="btn btn-dark">Submit</button>
+        </div>
+        <div class="col-8 border border-dark rounded">
+            <form class="login">
+                <div class="form-group">
+                    <label for="username">Username</label>
+                    <input type="text" class="form-control" id="username"
+                           placeholder="Enter username">
                 </div>
-                <div class="col-6">
-                    <button type="submit" class="btn btn-secondary">Register</button>
+                <div class="form-group">
+                    <label for="password">Password</label>
+                    <input type="password" class="form-control" id="password" placeholder="Password">
                 </div>
-            </div>
-        </form>
+                <div class="row ">
+                    <div class="col-6">
+                        <button type="submit" class="btn btn-dark">Submit</button>
+                    </div>
+                    <div class="col-6  text-right">
+                        <button type="submit" class="btn btn-secondary">Register</button>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-12 text-right">
+            <p>A COMP 6231: Distributed Systems Project by:<br><b>Osman, Ke and Mathieu </b></p>
+        </div>
     </div>
 </div>
 </body>
