started main page. Top nav bar

--- a/presentation/html/index.html
+++ b/presentation/html/index.html
@@ -31,7 +31,7 @@
             </div>
         </div>
         <div class="col-8 border border-dark rounded">
-            <form class="login">
+            <form class="login" method="post">
                 <div class="form-group">
                     <label for="username">Username</label>
                     <input type="text" class="form-control" id="username"
