--- a/presentation/html/main.html
+++ b/presentation/html/main.html
@@ -35,7 +35,7 @@
                 <a class="nav-link" onclick ="viewPosts()" href="#">View Posts</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Find Users</a>
+                <a class="nav-link" onclick="viewUsers()" href="#">Find Users</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">Find Files</a>
@@ -51,7 +51,7 @@
     <div class="row centerRow justify-content-center">
         <div class="col-8">
 
-            <form id ="postForm" method="post" class="d-none">
+            <form id ="postForm" method="post" class="d-none d-none">
                 <div class="form-group">
                     <label for="title">Title</label>
                     <input type="text" class="form-control" id="title"
