find files front end

--- a/presentation/html/index.html
+++ b/presentation/html/index.html
@@ -31,7 +31,7 @@
             </div>
         </div>
         <div class="col-8 border border-dark rounded">
-            <form class="login" method="post">
+            <form class="login" method="post" action="main.html">
                 <div class="form-group">
                     <label for="username">Username</label>
                     <input type="text" class="form-control" id="username"
@@ -46,7 +46,7 @@
                         <button type="submit" class="btn btn-dark">Submit</button>
                     </div>
                     <div class="col-6  text-right">
-                        <button type="submit" class="btn btn-secondary">Register</button>
+                        <button type="submit" onclick="" class="btn btn-secondary">Register</button>
                     </div>
                 </div>
             </form>
