--- a/presentation/html/main.html
+++ b/presentation/html/main.html
@@ -51,7 +51,7 @@
     <div class="row centerRow justify-content-center">
         <div class="col-8">
 
-            <form id="postForm" method="post" class="d-none d-none">
+            <form id="postForm" method="post" class="d-none">
                 <div class="form-group">
                     <label for="title">Title</label>
                     <input type="text" class="form-control" id="title"
